--- a/DockerFile
+++ b/DockerFile
@@ -1,27 +1,13 @@
-FROM ubuntu
+FROM python:3.9-slim
 
-# Disable interactive prompts during build
-ARG DEBIAN_FRONTEND=noninteractive
-
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    python3 \
-    python3-pip \
-    python3-venv \
-    ffmpeg \
-    libsndfile1 \
-    build-essential \
-    && rm -rf /var/lib/apt/lists/*
-
-# Set work directory
 WORKDIR /app
 
-# Copy project files
+COPY requirements.txt .
+
+RUN pip install --no-cache-dir -r requirements.txt
+
 COPY . .
 
-# Install Python dependencies
-RUN pip3 install --upgrade pip \
-    && pip3 install -r requirements.txt
+RUN chmod +x main.py
 
-# Default command to run the app
-CMD ["python3", "main.py"]
+ENTRYPOINT ["python", "main.py"]
