--- a/DockerFile
+++ b/DockerFile
@@ -8,6 +8,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-RUN chmod +x main.py
-
-ENTRYPOINT ["python", "main.py"]
+CMD ["python", "infer.py"]
